; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/wpa/src/eap_server/extr_eap_sim_db.c_eap_sim_db_get_next_pseudonym.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/wpa/src/eap_server/extr_eap_sim_db.c_eap_sim_db_get_next_pseudonym.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.eap_sim_db_data = type { i32 }

@EAP_SIM_REAUTH_ID_PREFIX = common dso_local global i8 0, align 1
@EAP_SIM_PSEUDONYM_PREFIX = common dso_local global i8 0, align 1
@EAP_AKA_PSEUDONYM_PREFIX = common dso_local global i8 0, align 1
@EAP_AKA_PRIME_PSEUDONYM_PREFIX = common dso_local global i8 0, align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @eap_sim_db_get_next_pseudonym(%struct.eap_sim_db_data* %0, i32 %1) #0 {
  %3 = alloca %struct.eap_sim_db_data*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i8, align 1
  store %struct.eap_sim_db_data* %0, %struct.eap_sim_db_data** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i8, i8* @EAP_SIM_REAUTH_ID_PREFIX, align 1
  store i8 %6, i8* %5, align 1
  %7 = load i32, i32* %4, align 4
  switch i32 %7, label %14 [
    i32 128, label %8
    i32 130, label %10
    i32 129, label %12
  ]

8:                                                ; preds = %2
  %9 = load i8, i8* @EAP_SIM_PSEUDONYM_PREFIX, align 1
  store i8 %9, i8* %5, align 1
  br label %14

10:                                               ; preds = %2
  %11 = load i8, i8* @EAP_AKA_PSEUDONYM_PREFIX, align 1
  store i8 %11, i8* %5, align 1
  br label %14

12:                                               ; preds = %2
  %13 = load i8, i8* @EAP_AKA_PRIME_PSEUDONYM_PREFIX, align 1
  store i8 %13, i8* %5, align 1
  br label %14

14:                                               ; preds = %2, %12, %10, %8
  %15 = load %struct.eap_sim_db_data*, %struct.eap_sim_db_data** %3, align 8
  %16 = load i8, i8* %5, align 1
  %17 = call i8* @eap_sim_db_get_next(%struct.eap_sim_db_data* %15, i8 signext %16)
  ret i8* %17
}

declare dso_local i8* @eap_sim_db_get_next(%struct.eap_sim_db_data*, i8 signext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
